--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body, html {
 }
 #container {
     display: flex;
-    align-items: center;
+    /* align-items: center; */
 }
 #camera {
     width: 100px; /* Adjust the width as needed */
