--- a/fontend/css/style_index.css
+++ b/fontend/css/style_index.css
@@ -27,13 +27,43 @@ body, html {
     left: 0; /* Keep the form on the left edge of the page */
 }
 
+.form-container .form-row {
+    display: flex;
+    align-items: center; /* Align the label and input vertically */
+    margin-bottom: 3px; /* Space between rows */
+    font-size: 18px;
+}
+
+/* Styling specifically for the Name label */
+.row-name {
+    width: 100%; /* Make the label take full width */
+    font-size: 20px; /* Font size 18px */
+    margin-bottom: 10px; /* Add some space below the label */
+}
+
+.form-container label {
+    width: 80px; /* Set fixed width for label */
+    margin-right: 10px; /* Space between label and input */
+    font-weight: bold;
+}
+
 /* Input field styling */
 .form-container input {
-    width: 90%;
+    width: 70%;
     padding: 10px;
     margin: 10px 0;
-    border: 1px solid #ccc;
+    border: none;
+    outline: none;
     border-radius: 4px;
+    font-size: 16px;
+    text-align: center;
+}
+
+.row-name input{
+    font-weight: bold;
+    font-size: 22px;
+    text-align: center;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 /* Button styling */
@@ -52,7 +82,6 @@ body, html {
 
 #container {
     display: flex;
-    /* align-items: center; */
 }
 #camera {
     width: 640px;
