--- a/fontend/css/style_index.css
+++ b/fontend/css/style_index.css
@@ -90,6 +90,17 @@ body, html {
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
+#mini-container {
+    display: grid;
+}
+#video_check {
+    align-self: self-end;
+    width: 320px; 
+    height: 240px ;
+    border: 2px solid #333;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
 .output_canvas{
     width: 100px; /* Adjust the width as needed */
     height: 100px;
