--- a/fontend/css/style_index.css
+++ b/fontend/css/style_index.css
@@ -1,4 +1,23 @@
-body, html {
+.topnav {
+    background-color: #333;
+    overflow: hidden;
+    position: absolute;
+    top: 20px;
+    left: 3px;
+    padding: 10px;
+  }
+  
+  .topnav .icon {
+    color: white;
+    font-size: 18px;
+    cursor: pointer;
+  }
+
+  #formContainer {
+    display: block;
+  }
+  
+  body, html {
     margin: 0;
     padding: 0;
     height: 100%;
@@ -7,49 +26,47 @@ body, html {
     justify-content: center;
     align-items: center;
     background-color: #f0f0f0;
-}
-.main-container {
+  }
+  
+  .main-container {
     display: flex;
     justify-content: flex-end;
     align-items: flex-start;
-    gap: 10px; /* Space between the form and video/canvas */
+    gap: 10px;
     margin-right: -90px;
-}
-
-/* Form styling */
-.form-container {
+  }
+  
+  .form-container {
     width: 200px;
-    margin-left: 0; /* Align the form on the far left */
+    margin-left: 0;
     padding: 15px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border: 2px solid #333;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     position: absolute;
-    left: 0; /* Keep the form on the left edge of the page */
-}
-
-.form-container .form-row {
+    left: 0;
+  }
+  
+  .form-container .form-row {
     display: flex;
-    align-items: center; /* Align the label and input vertically */
-    margin-bottom: 3px; /* Space between rows */
+    align-items: center;
+    margin-bottom: 3px;
     font-size: 18px;
-}
-
-/* Styling specifically for the Name label */
-.row-name {
-    width: 100%; /* Make the label take full width */
-    font-size: 20px; /* Font size 18px */
-    margin-bottom: 10px; /* Add some space below the label */
-}
-
-.form-container label {
-    width: 80px; /* Set fixed width for label */
-    margin-right: 10px; /* Space between label and input */
+  }
+  
+  .row-name {
+    width: 100%;
+    font-size: 20px;
+    margin-bottom: 10px;
+  }
+  
+  .form-container label {
+    width: 80px;
+    margin-right: 10px;
     font-weight: bold;
-}
-
-/* Input field styling */
-.form-container input {
+  }
+  
+  .form-container input {
     width: 90%;
     padding: 10px;
     margin: 10px 0;
@@ -58,54 +75,38 @@ body, html {
     border-radius: 4px;
     font-size: 16px;
     text-align: center;
-}
-
-.row-name input{
-    font-weight: bold;
-    font-size: 22px;
-    text-align: center;
-    font-family: 'Times New Roman', Times, serif;
-}
-
-/* Button styling */
-.form-container button {
-    padding: 10px 20px;
-    border: none;
-    background-color: #4CAF50;
-    color: white;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-.form-container button:hover {
-    background-color: #45a049;
-}
-
-#container {
+  }
+  
+  #container {
     display: flex;
-}
-#camera {
+  }
+  
+  #camera {
     width: 640px;
     height: 480px;
     border: 2px solid #333;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
-#mini-container {
+  }
+  
+  #mini-container {
     display: grid;
-}
-#video_check {
+  }
+  
+  #video_check {
     align-self: self-end;
-    width: 150px; 
-    height: 150px ;
+    width: 150px;
+    height: 150px;
     border: 2px solid #333;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
-.output_canvas{
-    width: 320px; /* Adjust the width as needed */
+  }
+  
+  .output_canvas {
+    width: 320px;
     height: 240px;
     border: 2px solid #333;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
+  }
+  
