--- a/fontend/css/style_index.css
+++ b/fontend/css/style_index.css
@@ -1,112 +1,135 @@
 .topnav {
-    background-color: #333;
-    overflow: hidden;
-    position: absolute;
-    top: 20px;
-    left: 3px;
-    padding: 10px;
-  }
-  
-  .topnav .icon {
-    color: white;
-    font-size: 18px;
-    cursor: pointer;
-  }
+  background-color: #333;
+  overflow: hidden;
+  position: absolute;
+  top: 20px;
+  left: 3px;
+  padding: 10px;
+}
 
-  #formContainer {
-    display: block;
-  }
-  
-  body, html {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: #f0f0f0;
-  }
-  
-  .main-container {
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-start;
-    gap: 10px;
-    margin-right: -90px;
-  }
-  
-  .form-container {
-    width: 200px;
-    margin-left: 0;
-    padding: 15px;
-    border: 2px solid #333;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    position: absolute;
-    left: 0;
-  }
-  
-  .form-container .form-row {
-    display: flex;
-    align-items: center;
-    margin-bottom: 3px;
-    font-size: 18px;
-  }
-  
-  .row-name {
-    width: 100%;
-    font-size: 20px;
-    margin-bottom: 10px;
-  }
-  
-  .form-container label {
-    width: 80px;
-    margin-right: 10px;
-    font-weight: bold;
-  }
-  
-  .form-container input {
-    width: 90%;
-    padding: 10px;
-    margin: 10px 0;
-    border: none;
-    outline: none;
-    border-radius: 4px;
-    font-size: 16px;
-    text-align: center;
-  }
-  
-  #container {
-    display: flex;
-  }
-  
-  #camera {
-    width: 640px;
-    height: 480px;
-    border: 2px solid #333;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  }
-  
-  #mini-container {
-    display: grid;
-  }
-  
-  #video_check {
-    align-self: self-end;
-    width: 150px;
-    height: 150px;
-    border: 2px solid #333;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  }
-  
-  .output_canvas {
-    width: 320px;
-    height: 240px;
-    border: 2px solid #333;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  }
-  
+.topnav .icon {
+  color: white;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+.exercise-box {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  border: 2px solid black;
+  border-radius: 15px;
+  padding: 10px;
+  width: 300px;
+  height: 50px;
+  background-color: white;
+  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
+  position: absolute;
+  top: 7px; /* Adjust top as needed to ensure it's below the topnav */
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.exercise-box span {
+  font-weight: bold;
+}
+
+#formContainer {
+  display: block;
+}
+
+body, html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #f0f0f0;
+}
+
+.main-container {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-start;
+  gap: 10px;
+  margin-right: -90px;
+}
+
+.form-container {
+  width: 200px;
+  margin-left: 0;
+  padding: 15px;
+  border: 2px solid #333;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  position: absolute;
+  left: 0;
+}
+
+.form-container .form-row {
+  display: flex;
+  align-items: center;
+  margin-bottom: 3px;
+  font-size: 18px;
+}
+
+.row-name {
+  width: 100%;
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.form-container label {
+  width: 80px;
+  margin-right: 10px;
+  font-weight: bold;
+}
+
+.form-container input {
+  width: 90%;
+  padding: 10px;
+  margin: 10px 0;
+  border: none;
+  outline: none;
+  border-radius: 4px;
+  font-size: 16px;
+  text-align: center;
+  background-color: white;
+}
+
+#container {
+  display: flex;
+}
+
+#camera {
+  width: 640px;
+  height: 480px;
+  border: 2px solid #333;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+#mini-container {
+  display: grid;
+}
+
+#video_check {
+  align-self: self-end;
+  width: 150px;
+  height: 150px;
+  border: 2px solid #333;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  background-color: black;
+}
+
+.output_canvas {
+  width: 320px;
+  height: 240px;
+  border: 2px solid #333;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
