--- a/fontend/css/style_index.css
+++ b/fontend/css/style_index.css
@@ -18,10 +18,10 @@
   justify-content: space-around;
   align-items: center;
   border: 2px solid black;
-  border-radius: 15px;
-  padding: 10px;
+  border-radius: 10px;
+  padding: 7px;
   width: 300px;
-  height: 50px;
+  height: 30px;
   background-color: white;
   box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
   position: absolute;
@@ -55,6 +55,7 @@ body, html {
   align-items: flex-start;
   gap: 10px;
   margin-right: -90px;
+  margin-top: 10px;
 }
 
 .form-container {
