--- a/fontend/css/style_main.css
+++ b/fontend/css/style_main.css
@@ -159,85 +159,67 @@ html {
     font-family: 'Arial', sans-serif;
 }
 
-/* Title card paragraph */
-.title-card p {
-    margin: 5px 0 0; /* Reduced margin for tighter spacing */
-    font-size: 1.1em; /* Slightly smaller font size */
-    line-height: 1.4; /* Adjusted line height */
+@media (max-width: 1200px) {
+    .title-card{
+        width: 748px;
+    }
+
+    .title-card h1{
+        max-width: 100%;
+        font-size: 1.6em;
+    }
+
+    #toggleButton{
+        margin-left: 50px;
+    }
+
+    .form-container{
+        margin-top: -10px;
+    }
 }
 
-/* Media queries for responsive design */
-@media (max-width: 1300px) {
-    .main-container {
-        flex-direction: column; /* Stack elements vertically */
-        align-items: center; /* Center elements */
-    }
-
-    .form-container {
-        width: 30%; /* Allow more space on medium screens */
-    }
-    .form-container input[type="text"] {
-        width: 90%;
-        
-    }
-
-    #container {
-        flex-direction: column; /* Stack camera and canvas vertically */
-        align-items: center; /* Center camera and canvas */
-    }
-
+@media (max-width: 1000px) {
     .output_canvas {
-        max-width: 100%; /* Full width for smaller screens */
-        height: auto; /* Maintain aspect ratio */
+        width: 640px; /* Smaller output canvas */
+        height: 480px; /* Maintain aspect ratio */
     }
 
-    .title-card {
-        margin-bottom: 60px;
-        width: 95%; /* Responsive title card width */
-    }
-}
-
-@media (max-width: 992px) {
     .form-container {
         width: 40%; /* Allow more space on medium screens */
     }
     .form-container input[type="text"] {
-        width: 40%;
-        
-    }
-
-    .output_canvas {
-        width: 80%; /* Smaller output canvas */
-        height: auto; /* Maintain aspect ratio */
+        width: 80%;
     }
 }
 
 @media (max-width: 768px) {
-   
-    .form-container input[type="text"] {
-        width: 90%;
-        
-    }
     .main-container {
         flex-direction: column; /* Stack elements vertically */
         align-items: center; /* Center elements */
     }
-
     
-
     #container {
         flex-direction: column; /* Stack camera and canvas vertically */
         align-items: center; /* Center camera and canvas */
     }
 
     .output_canvas {
-        max-width: 100%; /* Full width for smaller screens */
-        height: auto; /* Maintain aspect ratio */
+        max-width: 540px; /* Full width for smaller screens */
+        max-height: 440px; /* Maintain aspect ratio */
+    }
+    .title-card{
+        width: 100%;
+    }
+    .title-card h1{
+        font-size: 1.4em;
+    }
+    #toggleButton{
+        margin-top: 10px;
+        margin-left: 10px;
     }
 
-    .title-card {
-        margin-bottom: 100px;
-        width: 95%; /* Responsive title card width */
+    .form-container input[type="text"] {
+        width: 90%;
     }
 }
 
@@ -250,14 +232,16 @@ html {
     .form-container button {
         font-size: 14px; /* Smaller font size for mobile */
     }
-
-    .title-card h1 {
-        font-size: 1.5em; /* Smaller heading size */
+    .title-card {
+        width: 98%;
+    }
+    .title-card h1 { 
+        font-size: 1.2em; /* Smaller heading size */
     }
 
-    .title-card p {
-        margin-bottom: 100px;
-        font-size: 1em; /* Smaller paragraph size */
+    .output_canvas {
+        max-width: 480px; /* Full width for smaller screens */
+        max-height: 400px; /* Maintain aspect ratio */
     }
 }
 @media (max-width: 480px) {
@@ -271,32 +255,33 @@ html {
     }
 
     .title-card h1 {
-        font-size: 1.5em; /* Smaller heading size */
+        font-size: 1em; /* Smaller heading size */
     }
-
-    .title-card p {
-        margin-bottom: 100px;
-        font-size: 1em; /* Smaller paragraph size */
-    }
-}
-
-@media (orientation: portrait) {
-    .form-container {
-        max-width: 94%; /* More room for forms in portrait mode */
-    }
-    .form-container input[type="text"] {
-        width: 94%;
-        
-    }
-
     .output_canvas {
-        width: 100%; /* Full width in portrait mode */
-        height: auto; /* Maintain aspect ratio */
-    }
-
-    #camera {
-        width: 80px; /* Smaller camera in portrait */
-        height: 80px; /* Keep aspect ratio */
+        max-width: 98%; /* Full width for smaller screens */
+        max-height: 440px; /* Maintain aspect ratio */
     }
 }
 
+@media (max-width: 350px) {
+    .form-container {
+        width: 100%; /* Full width for mobile */
+    }
+
+    .form-container input[type="text"],
+
+    .form-container button {
+        font-size: 14px; /* Smaller font size for mobile */
+    }
+    .title-card {
+        width: 95%;
+    }
+
+    .title-card h1 {
+        font-size: 1em; /* Smaller heading size */
+    }
+    .output_canvas {
+        max-width: 98%; /* Full width for smaller screens */
+        max-height: 440px; /* Maintain aspect ratio */
+    }
+}
