--- a/fontend/css/style_index.css
+++ b/fontend/css/style_index.css
@@ -13,6 +13,32 @@
   cursor: pointer;
 }
 
+.top-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative; /* Ensures child elements position relative to .top-page */
+  padding: 10px 0;
+}
+
+.exercise-name {
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid #333;
+  border-radius: 3px;
+  padding: 3px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  width: 300px; /* Adjust as needed */
+  font-size: 16px;
+  margin-bottom: 3px; /* Space between .exercise-name and .exercise-box */
+}
+
+.exercise-name h3{
+  margin: 6px auto;
+}
+
 .exercise-box {
   display: flex;
   justify-content: space-around;
@@ -24,10 +50,6 @@
   height: 30px;
   background-color: white;
   box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
-  position: absolute;
-  top: 7px; /* Adjust top as needed to ensure it's below the topnav */
-  left: 50%;
-  transform: translateX(-50%);
 }
 
 .exercise-box span {
@@ -55,7 +77,7 @@ body, html {
   align-items: flex-start;
   gap: 10px;
   margin-right: -90px;
-  margin-top: 10px;
+  margin-top: 2px;
 }
 
 .form-container {
