--- a/frontend/css/style_index.css
+++ b/frontend/css/style_index.css
@@ -156,6 +156,23 @@ body, html {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
+#notification-container {
+  display: none;
+  position: fixed;
+  top: 20px;
+  right: 280px;
+  z-index: 1000;
+  background-color: #4caf50;
+  color: #fff;
+  padding: 15px 20px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  transform: translateX(100%);
+  animation: slideIn 0.5s forwards, fadeOut 0.5s ease-out 4.5s forwards;
+}
+
+
 /* Media query for smaller screens */
 @media (max-width: 768px) {
   .main-container {
