--- a/frontend/css/style_index.css
+++ b/frontend/css/style_index.css
@@ -156,6 +156,62 @@ body, html {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
+.center-form {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: none;
+  flex-direction: column;
+  background-color: rgba(255, 255, 255, 0.8); /* Slightly transparent */
+  padding: 10px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+.center-form .form-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 5px;
+}
+
+.center-form label {
+  font-weight: bold;
+  margin-right: 10px;
+  margin-bottom: 5px;
+}
+.form-row {
+  display: flex;
+  align-items: center;
+  gap: 10px; /* Adds space between elements */
+}
+
+#sliderValue {
+  font-weight: bold;
+  font-size: 16px;
+}
+.center-form select {
+  width: 50%;
+  padding: 5px;
+  border-radius: 4px;
+  border: 1px solid #333;
+}
+.center-form button{
+  width: 40%;
+  margin-top: 5px;
+  padding: 10px;
+  border: none;
+  background-color: rgba(152, 251, 152, 0.85);
+  color: #004d00;
+  font-weight: bold;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.center-form button:hover {
+  background-color: #45a049;
+}
+
 #notification-container {
   display: none;
   position: fixed;
