--- a/frontend/css/style_index.css
+++ b/frontend/css/style_index.css
@@ -156,7 +156,7 @@ body, html {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
-.center-form {
+.check-form {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -169,14 +169,14 @@ body, html {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
-.center-form .form-row {
+.check-form .form-row {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 5px;
 }
 
-.center-form label {
+.check-form label {
   font-weight: bold;
   margin-right: 10px;
   margin-bottom: 5px;
@@ -191,13 +191,13 @@ body, html {
   font-weight: bold;
   font-size: 16px;
 }
-.center-form select {
+.check-form select {
   width: 50%;
   padding: 5px;
   border-radius: 4px;
   border: 1px solid #333;
 }
-.center-form button{
+.check-form button{
   width: 40%;
   margin-top: 5px;
   padding: 10px;
@@ -208,7 +208,7 @@ body, html {
   border-radius: 4px;
   cursor: pointer;
 }
-.center-form button:hover {
+.check-form button:hover {
   background-color: #45a049;
 }
 
