--- a/frontend/css/style_login.css
+++ b/frontend/css/style_login.css
@@ -19,7 +19,7 @@ html {
     left: 0;
     right: 0;
     width: 100%;
-    padding: 15px 20px;
+    padding: 15px 0;
     background:none;
     display: flex;
     justify-content: center;
@@ -229,7 +229,7 @@ html {
         margin-left: 10px;
     }
     .form_container{
-        margin-bottom: -150px !important;
+        margin-bottom: -100px !important;
     }
 
     .form_container input[type="text"] {
@@ -273,7 +273,7 @@ html {
     }
     .output_canvas {
         max-width: 98%; /* Full width for smaller screens */
-        max-height: 440px; /* Maintain aspect ratio */
+        max-height: 400px; /* Maintain aspect ratio */
     }
 }
 
@@ -296,7 +296,7 @@ html {
     }
     .output_canvas {
         max-width: 98%; /* Full width for smaller screens */
-        max-height: 440px; /* Maintain aspect ratio */
+        max-height: 350px; /* Maintain aspect ratio */
     }
 }
 @media (max-width: 285px) {
