--- a/frontend/css/style_home.css
+++ b/frontend/css/style_home.css
@@ -114,6 +114,7 @@ body {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   margin: 5px;
   height: 35em;
+  width: 99%;
 }
 .testimonial .stars {
   font-size: 24px;
@@ -130,6 +131,130 @@ body {
 .testimonial .highlight {
   background-color: #FFD580; /* Light orange highlight */
   padding: 0 5px;
+}
+.testimonial_1 {
+  text-align: center;
+  padding: 100px 20px;
+  color: #333;
+  background-color: #fff;
+  border: 2px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  margin: 5px;
+  height: 70em;
+  width: 99%;
+}
+.global-map{
+  text-align: center;
+  background-image: url('/frontend/images/bg_map.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 43em;
+}
+.section-intro{
+  text-align: center;
+  flex-direction: column;
+  align-items: center;
+  max-width: 1500px;
+  margin-bottom: 80px;
+  padding-left: 15px;
+  padding-right: 15px;
+  display: flex;
+}
+.testimonials-v1{
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+.review_v1{
+  cursor: pointer;
+  justify-content: center;
+  align-items: center;
+  padding: 8px;
+  display: flex;
+}
+.review_v1._1 {
+  z-index: 1;
+  position: absolute;
+  top: 5%;
+  left: 30.5%;
+}
+.review_v1._2 {
+  z-index: 1;
+  position: absolute;
+  top: 35%;
+  left: 11%;
+}
+.review_v1._3 {
+  z-index: 1;
+  position: absolute;
+  top: 70%;
+  left: 25%;
+}
+.review_v1._4 {
+  z-index: 1;
+  position: absolute;
+  top: 60%;
+  left: 48%;
+}
+.review_v1._5 {
+  z-index: 1;
+  position: absolute;
+  top: 19%;
+  left: 55.4%;
+}
+.review_v1._6 {
+  z-index: 1;
+  position: absolute;
+  top: 44%;
+  left: 70.3%;
+}
+.review_v1._7 {
+  z-index: 1;
+  position: absolute;
+  top: 13%;
+  left: 80.3%;
+}
+.review-v1-avatar{
+  filter: grayscale();
+  border: 3px #d7dce5;
+  border-radius: 100%;
+  width: 48px;
+  height: 48px;
+}
+.achievements{
+  justify-content: center;
+  width: 100%;
+  margin-top: 64px;
+  display: flex;
+}
+.achievement-number-2 {
+  color: #2583fd;
+  margin-bottom: 20px;
+  font-family: Rubik, sans-serif;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 44px;
+}
+.achievement{
+  flex-direction: column;
+  flex: 1;
+  align-items: center;
+  padding: 24px 15px;
+  font-weight: 700;
+  display: flex;
+}
+.map-data-label {
+  color: #2583fd;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  font-family: Rubik, sans-serif;
+  font-size: 16px;
+  font-weight: 700;
 }
 .footer {
   width: 100%;
