--- a/frontend/css/style_home.css
+++ b/frontend/css/style_home.css
@@ -106,7 +106,7 @@ body {
 /* Testimonial section */
 .testimonial {
   text-align: center;
-  padding: 150px 20px;
+  padding: 100px 20px;
   color: #333;
   background-color: #fff;
   border: 2px solid #ccc;
@@ -146,7 +146,7 @@ body {
 }
 .global-map{
   text-align: center;
-  background-image: url('/frontend/images/bg_map.png');
+  background-image: url('/frontend/images/map.png');
   background-repeat: no-repeat;
   background-size: contain;
   width: 100%;
@@ -165,10 +165,9 @@ body {
   display: flex;
 }
 .testimonials-v1{
-  justify-content: center;
-  align-items: center;
-  display: flex;
-  position: relative;
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
 }
@@ -178,53 +177,41 @@ body {
   align-items: center;
   padding: 8px;
   display: flex;
+  position: absolute;
+  transform: translate(-50%, -50%); 
 }
 .review_v1._1 {
-  z-index: 1;
-  position: absolute;
   top: 5%;
-  left: 30.5%;
+  left: 33%;
 }
 .review_v1._2 {
-  z-index: 1;
-  position: absolute;
   top: 35%;
-  left: 11%;
+  left: 16%;
 }
 .review_v1._3 {
-  z-index: 1;
-  position: absolute;
   top: 70%;
-  left: 25%;
+  left: 27%;
 }
 .review_v1._4 {
-  z-index: 1;
-  position: absolute;
   top: 60%;
-  left: 48%;
+  left: 50.4%;
 }
 .review_v1._5 {
-  z-index: 1;
-  position: absolute;
   top: 19%;
   left: 55.4%;
 }
 .review_v1._6 {
-  z-index: 1;
-  position: absolute;
   top: 44%;
-  left: 70.3%;
+  left: 74%;
 }
 .review_v1._7 {
-  z-index: 1;
-  position: absolute;
-  top: 13%;
-  left: 80.3%;
+  top: 12%;
+  left: 86%;
 }
 .review-v1-avatar{
   filter: grayscale();
-  border: 3px #d7dce5;
-  border-radius: 100%;
+  border: 3px solid #d7dce5;
+  border-radius: 50%;
   width: 48px;
   height: 48px;
 }
@@ -330,19 +317,29 @@ body {
   .global-map{
     height: 38em;
   }
-  .review_v1._1, .review_v1._2, .review_v1._3, .review_v1._4, .review_v1._5, .review_v1._6, .review_v1._7{
-    display: none;
-  }
+  /* .review_v1._1, .review_v1._2, .review_v1._3, .review_v1._4, .review_v1._5, .review_v1._6, .review_v1._7{ */
+    /* display: none;
+  } */
   .achievements{
-    margin-top: 30px;
+    margin-top: 26px;
   }
   .achievement-number-2{
     font-size: 30px;
   }
 }
 @media (max-width: 768px) {
+  .testimonial{
+    padding: 60px 20px;
+  }
   .testimonial_1{
     height: 56%;
+  }
+  .review-v1-avatar {
+    width: 36px;
+    height: 36px;
+  }
+  .review_v1 {
+    transform: translate(-50%, -50%) scale(0.8); /* Adjust icon size */
   }
   .global-map{
     height: 24em;
@@ -355,6 +352,12 @@ body {
   }
 }
 @media (max-width: 576px) {
+  .testimonial{
+    padding: 30px 20px;
+  }
+  .testimonial p{
+    font-size: 20px;
+  }
   .testimonial_1{
     height: 50%;
   }
@@ -369,8 +372,21 @@ body {
   }
 }
 @media (max-width: 480px) {
+  .hero{
+    padding: 100px 20px;
+  }
+  .testimonial{
+    padding: 20px 15px;
+  }
   .testimonial_1{
     height: 40%;
+  }
+  .review-v1-avatar {
+    width: 28px;
+    height: 28px;
+  }
+  .review_v1 {
+    transform: translate(-50%, -50%) scale(0.6); /* Further adjust for small screens */
   }
   .global-map{
     height: 15em;
