--- a/frontend/css/style_home.css
+++ b/frontend/css/style_home.css
@@ -327,6 +327,9 @@ body {
     font-size: 30px;
   }
 }
+@media (max-width: 1000px) {
+  
+}
 @media (max-width: 768px) {
   .testimonial{
     padding: 60px 20px;
