--- a/frontend/css/style_exercise.css
+++ b/frontend/css/style_exercise.css
@@ -227,14 +227,27 @@ body, html {
   transform: translateX(100%);
   animation: slideIn 0.5s forwards, fadeOut 0.5s ease-out 4.5s forwards;
 }
-
+@media (max-width: 1400px) {
+  .exercise-box{
+    height: 4em;
+  }
+  .exercise-box span {
+    font-size: 18px;
+    font-weight: normal;
+    font-family: sans-serif;
+  }
+}
 @media (max-width: 1200px) {
 
   .main-container{
     margin-right: 0;
   }
+
+  .exercise-box{
+    height: 4em;
+  }
   .exercise-box span {
-    font-size: 17px;
+    font-size: 18px;
     font-weight: normal;
     font-family: sans-serif;
   }
@@ -265,10 +278,15 @@ body, html {
   .exercise-box{
     flex-direction: column;
     align-items: center;
-    height: 5em;
+    height: 6em;
+    margin-top: -10px;
   }
   #exercise-name{
     margin: 5px;
+  }
+  .details {
+    align-items: center;
+    justify-content: center;
   }
 }
 @media (max-width: 576px) {
@@ -280,7 +298,7 @@ body, html {
   }
   .details span{
     padding-left: 2px;
-    font-size: 14px;
+    font-size: 16px;
   }
   #camera{
     margin-left: 25px;
@@ -297,7 +315,7 @@ body, html {
   }
   .details span{
     padding-left: 2px;
-    font-size: 14px;
+    font-size: 16px;
   }
   #camera{
     height: 250px;
@@ -323,7 +341,7 @@ body, html {
   }
   .details span{
     padding-left: 2px;
-    font-size: 14px;
+    font-size: 15px;
   }
   .output_canvas{
     width: 50%;
